# midi-mapper

./: .gitignore  Cargo.toml  README.md  flake.nix  notes.md  shell.nix
exe/: Cargo.toml
exe/midi-mapper/: main.rs
exe/midi-mapper/resources/: default_config.dhall  default_config.yaml
exe/midi-printer/: main.rs
exe/my-exe-1/: main.rs
exe/my-exe-1/resources/: default_config.toml
exe/src/: lib.rs
exe/src/midi_mapper/: main.rs
exe/src/midi_mapper/dhall/: lib.dhall
exe/src/midi_mapper/resources/: configs.dhall  default_config.dhall  default_config.yaml  minifreak.dhall  mk2_3by4.dhall  multi_channel.dhall  simple_config.dhall
exe/src/midi_printer/: main.rs
lib/: Cargo.toml
lib/src/: chordifier.rs  chords.rs  lib.rs  midi_device.rs
test/: Cargo.toml
test/src/: lib.rs
utils/: Cargo.toml
utils/src/: app_config.rs  call_process.rs  cli_config.rs  common_inits.rs  error.rs  lib.rs
