# [package]
# name = "walkways"
# version = "0.0.1"
# authors = ["zmrocze <karolochmanmilarski@gmail.com>"]
# edition = "2018"
# repository = ""
# readme = "README.md"
# license = "MIT"
# keywords = [""]
# description = """
# Your project description.
# """

[workspace]
members = [
    "lib",
    "exe",
    "utils"
]

[profile.dev]
opt-level=0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level=3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
