[package]
name = "my-exe-1"
version = "0.1.0"
edition = "2021"

[dependencies]
better-panic = "0.2.0"
utils = { path = "../utils" }
midi-mapper = { path = "../lib"}
serde = { version = "1.0", features = ["derive"]}
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
# core = { path = "core" }
# human-panic = "1.0.3"

[dependencies.clap]
version = "4.3.0"
features = ["cargo", "derive"]

# [dev-dependencies]
# assert_cmd = "1.0.1"
# predicates = "1.0.5"


[[bin]]
name = "my-exe-1"
path = "my-exe-1/main.rs"
