[package]
name = "chordifier"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
midi-mapper = { path = "../lib"}
serde = { version = "1.0", features = ["derive"]}
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
serde_yaml = "0.9.34+deprecated"
# core = { path = "core" }
# human-panic = "1.0.3"

[dependencies.clap]
version = "4.3.0"
features = ["cargo", "derive"]

# [dev-dependencies]
# assert_cmd = "1.0.1"
# predicates = "1.0.5"


[[bin]]
name = "midi-mapper"
path = "midi-mapper/main.rs"

[[bin]]
name = "midi-printer"
path = "midi-printer/main.rs"
